implement login page and other basic page

--- a/plate-drop-ui/src/app/globals.css
+++ b/plate-drop-ui/src/app/globals.css
@@ -346,3 +346,19 @@ a {
 .hidden {
   visibility: hidden;
 }
+
+.d-flex {
+  display: flex;
+}
+
+.align-items-center {
+  align-items: center;
+}
+
+.justify-content-between {
+  justify-content: space-between;
+}
+
+.fw-bold {
+  font-weight: 700;
+}
