--- a/plate-drop-ui/src/app/restaurant-management/style.module.css
+++ b/plate-drop-ui/src/app/restaurant-management/style.module.css
@@ -1,8 +1,6 @@
-/* style.module.css */
-
 .layoutContainer {
   display: flex;
-  height: 100vh; /* Full height of the viewport */
+  height: 100vh;
 }
 
 .menuContainer {
@@ -18,4 +16,18 @@
 
 .menuContainer img {
   margin-bottom: 1rem; /* Add some space below the image */
+}
+
+.contentContainer {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.content {
+  flex: 1;
+  margin: 2rem;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
